# datascienceday2026

./: .gitignore  README.md  pyproject.toml
data/: glove_sample.csv
notebooks/: 01_birthday_paradox.ipynb  01_monty_hall.ipynb  02_birthday_paradox.ipynb  03_breast_cancer.ipynb  03_marketing_campaign.ipynb  03_titanic.ipynb  04_word_embeddings.ipynb  05_marketing_campaign.ipynb  demo.ipynb
